8204994: SA might fail to attach to process with "Windbg Error: WaitForEvent failed"

Reviewed-by: sspitsyn, cjplummer